src/FlaskGen/FlaskParser.java
// Generated from C:/compiler/compiler-p-/FlaskParser.g4 by ANTLR 4.13.2
package FlaskGen;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class FlaskParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		INDENT=1, DEDENT=2, LPAR=3, RPAR=4, LSQB=5, RSQB=6, LBRACE=7, RBRACE=8, 
		DOT=9, COLON=10, COMMA=11, SEMI=12, PLUS=13, MINUS=14, STAR=15, SLASH=16, 
		CIRCUMFLEX=17, LEFTSHIFT=18, RIGHTSHIFT=19, VBAR=20, AMPER=21, LESS=22, 
		GREATER=23, EQUAL=24, EQEQUAL=25, NOTEQUAL=26, LESSEQUAL=27, GREATEREQUAL=28, 
		PERCENT=29, PLUSEQUAL=30, MINEQUAL=31, STAREQUAL=32, SLASHEQUAL=33, DOUBLESTAR=34, 
		DOUBLESLASH=35, AT=36, RARROW=37, ELLIPSIS=38, EXCLAMATION=39, FALSE=40, 
		TRUE=41, NONE=42, PASS=43, BREAK=44, CONTINUE=45, IF=46, ELSE=47, ELIF=48, 
		FOR=49, IN=50, WHILE=51, DEF=52, RETURN=53, IMPORT=54, FROM=55, AS=56, 
		WITH=57, TRY=58, EXCEPT=59, FINALLY=60, CLASS=61, GLOBAL=62, NONLOCAL=63, 
		DEL=64, RAISE=65, ASSERT=66, LAMBDA=67, AWAIT=68, YIELD=69, OR=70, AND=71, 
		NOT=72, IS=73, NAME=74, NUMBER=75, STRING=76, NEWLINE=77, COMMENT=78, 
		WS=79;
	public static final int
		RULE_statement = 0, RULE_file_input = 1, RULE_stmt_list = 2, RULE_simple_stmt = 3, 
		RULE_small_stmt = 4, RULE_import_stmt = 5, RULE_import_as_names = 6, RULE_import_as_name = 7, 
		RULE_dotted_as_names = 8, RULE_dotted_as_name = 9, RULE_dotted_name = 10, 
		RULE_expr_stmt = 11, RULE_testlist_star_expr = 12, RULE_test = 13, RULE_or_test = 14, 
		RULE_and_test = 15, RULE_not_test = 16, RULE_comparison = 17, RULE_comp_op = 18, 
		RULE_expr = 19, RULE_xor_expr = 20, RULE_and_expr = 21, RULE_shift_expr = 22, 
		RULE_arith_expr = 23, RULE_term = 24, RULE_factor = 25, RULE_power = 26, 
		RULE_atom_expr = 27, RULE_trailer = 28, RULE_arglist = 29, RULE_argument = 30, 
		RULE_atom = 31, RULE_list_comp = 32, RULE_generator_expression = 33, RULE_dictorsetmaker = 34, 
		RULE_dict_entry = 35, RULE_decorators = 36, RULE_decorator = 37, RULE_subscriptlist = 38, 
		RULE_subscript = 39, RULE_return_stmt = 40, RULE_pass_stmt = 41, RULE_del_stmt = 42, 
		RULE_exprlist = 43, RULE_global_stmt = 44, RULE_nonlocal_stmt = 45, RULE_compound_stmt = 46, 
		RULE_if_stmt = 47, RULE_while_stmt = 48, RULE_for_stmt = 49, RULE_funcdef = 50, 
		RULE_parameters = 51, RULE_typedargslist = 52, RULE_tfpdef = 53, RULE_classdef = 54, 
		RULE_with_stmt = 55, RULE_with_item = 56, RULE_try_stmt = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"statement", "file_input", "stmt_list", "simple_stmt", "small_stmt", 
			"import_stmt", "import_as_names", "import_as_name", "dotted_as_names", 
			"dotted_as_name", "dotted_name", "expr_stmt", "testlist_star_expr", "test", 
			"or_test", "and_test", "not_test", "comparison", "comp_op", "expr", "xor_expr", 
			"and_expr", "shift_expr", "arith_expr", "term", "factor", "power", "atom_expr", 
			"trailer", "arglist", "argument", "atom", "list_comp", "generator_expression", 
			"dictorsetmaker", "dict_entry", "decorators", "decorator", "subscriptlist", 
			"subscript", "return_stmt", "pass_stmt", "del_stmt", "exprlist", "global_stmt", 
			"nonlocal_stmt", "compound_stmt", "if_stmt", "while_stmt", "for_stmt", 
			"funcdef", "parameters", "typedargslist", "tfpdef", "classdef", "with_stmt", 
			"with_item", "try_stmt"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, "'('", "')'", "'['", "']'", "'{'", "'}'", "'.'", "':'", 
			"','", "';'", "'+'", "'-'", "'*'", "'/'", "'^'", "'<<'", "'>>'", "'|'", 
			"'&'", "'<'", "'>'", "'='", "'=='", "'!='", "'<='", "'>='", "'%'", "'+='", 
			"'-='", "'*='", "'/='", "'**'", "'//'", "'@'", "'->'", "'...'", "'!'", 
			"'False'", "'True'", "'None'", "'pass'", "'break'", "'continue'", "'if'", 
			"'else'", "'elif'", "'for'", "'in'", "'while'", "'def'", "'return'", 
			"'import'", "'from'", "'as'", "'with'", "'try'", "'except'", "'finally'", 
			"'class'", "'global'", "'nonlocal'", "'del'", "'raise'", "'assert'", 
			"'lambda'", "'await'", "'yield'", "'or'", "'and'", "'not'", "'is'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "INDENT", "DEDENT", "LPAR", "RPAR", "LSQB", "RSQB", "LBRACE", "RBRACE", 
			"DOT", "COLON", "COMMA", "SEMI", "PLUS", "MINUS", "STAR", "SLASH", "CIRCUMFLEX", 
			"LEFTSHIFT", "RIGHTSHIFT", "VBAR", "AMPER", "LESS", "GREATER", "EQUAL", 
			"EQEQUAL", "NOTEQUAL", "LESSEQUAL", "GREATEREQUAL", "PERCENT", "PLUSEQUAL", 
			"MINEQUAL", "STAREQUAL", "SLASHEQUAL", "DOUBLESTAR", "DOUBLESLASH", "AT", 
			"RARROW", "ELLIPSIS", "EXCLAMATION", "FALSE", "TRUE", "NONE", "PASS", 
			"BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "FOR", "IN", "WHILE", "DEF", 
			"RETURN", "IMPORT", "FROM", "AS", "WITH", "TRY", "EXCEPT", "FINALLY", 
			"CLASS", "GLOBAL", "NONLOCAL", "DEL", "RAISE", "ASSERT", "LAMBDA", "AWAIT", 
			"YIELD", "OR", "AND", "NOT", "IS", "NAME", "NUMBER", "STRING", "NEWLINE", 
			"COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FlaskParser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FlaskParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class StatementContext extends ParserRuleContext {
		public Simple_stmtContext simple_stmt() {
			return getRuleContext(Simple_stmtContext.class,0);
		}
		public Compound_stmtContext compound_stmt() {
			return getRuleContext(Compound_stmtContext.class,0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_statement; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterStatement(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitStatement(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitStatement(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StatementContext statement() throws RecognitionException {
		StatementContext _localctx = new StatementContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_statement);
		try {
			setState(118);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case LPAR:
			case LSQB:
			case LBRACE:
			case PLUS:
			case MINUS:
			case FALSE:
			case TRUE:
			case NONE:
			case PASS:
			case RETURN:
			case IMPORT:
			case FROM:
			case GLOBAL:
			case NONLOCAL:
			case DEL:
			case AWAIT:
			case NOT:
			case NAME:
			case NUMBER:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(116);
				simple_stmt();
				}
				break;
			case AT:
			case IF:
			case FOR:
			case WHILE:
			case DEF:
			case WITH:
			case TRY:
			case CLASS:
				enterOuterAlt(_localctx, 2);
				{
				setState(117);
				compound_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class File_inputContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(FlaskParser.EOF, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FlaskParser.NEWLINE, i);
		}
		public File_inputContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file_input; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterFile_input(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitFile_input(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitFile_input(this);
			else return visitor.visitChildren(this);
		}
	}

	public final File_inputContext file_input() throws RecognitionException {
		File_inputContext _localctx = new File_inputContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_file_input);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & -1803041770670366552L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 15633L) != 0)) {
				{
				setState(122);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LPAR:
				case LSQB:
				case LBRACE:
				case PLUS:
				case MINUS:
				case AT:
				case FALSE:
				case TRUE:
				case NONE:
				case PASS:
				case IF:
				case FOR:
				case WHILE:
				case DEF:
				case RETURN:
				case IMPORT:
				case FROM:
				case WITH:
				case TRY:
				case CLASS:
				case GLOBAL:
				case NONLOCAL:
				case DEL:
				case AWAIT:
				case NOT:
				case NAME:
				case NUMBER:
				case STRING:
					{
					setState(120);
					statement();
					}
					break;
				case NEWLINE:
					{
					setState(121);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Stmt_listContext extends ParserRuleContext {
		public TerminalNode INDENT() { return getToken(FlaskParser.INDENT, 0); }
		public TerminalNode DEDENT() { return getToken(FlaskParser.DEDENT, 0); }
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public List<TerminalNode> NEWLINE() { return getTokens(FlaskParser.NEWLINE); }
		public TerminalNode NEWLINE(int i) {
			return getToken(FlaskParser.NEWLINE, i);
		}
		public Stmt_listContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt_list; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterStmt_list(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitStmt_list(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitStmt_list(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Stmt_listContext stmt_list() throws RecognitionException {
		Stmt_listContext _localctx = new Stmt_listContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_stmt_list);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(129);
			match(INDENT);
			setState(132); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				setState(132);
				_errHandler.sync(this);
				switch (_input.LA(1)) {
				case LPAR:
				case LSQB:
				case LBRACE:
				case PLUS:
				case MINUS:
				case AT:
				case FALSE:
				case TRUE:
				case NONE:
				case PASS:
				case IF:
				case FOR:
				case WHILE:
				case DEF:
				case RETURN:
				case IMPORT:
				case FROM:
				case WITH:
				case TRY:
				case CLASS:
				case GLOBAL:
				case NONLOCAL:
				case DEL:
				case AWAIT:
				case NOT:
				case NAME:
				case NUMBER:
				case STRING:
					{
					setState(130);
					statement();
					}
					break;
				case NEWLINE:
					{
					setState(131);
					match(NEWLINE);
					}
					break;
				default:
					throw new NoViableAltException(this);
				}
				}
				setState(134); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & -1803041770670366552L) != 0) || ((((_la - 64)) & ~0x3f) == 0 && ((1L << (_la - 64)) & 15633L) != 0) );
			setState(136);
			match(DEDENT);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Simple_stmtContext extends ParserRuleContext {
		public List<Small_stmtContext> small_stmt() {
			return getRuleContexts(Small_stmtContext.class);
		}
		public Small_stmtContext small_stmt(int i) {
			return getRuleContext(Small_stmtContext.class,i);
		}
		public TerminalNode NEWLINE() { return getToken(FlaskParser.NEWLINE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(FlaskParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(FlaskParser.SEMI, i);
		}
		public Simple_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_simple_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterSimple_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitSimple_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitSimple_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Simple_stmtContext simple_stmt() throws RecognitionException {
		Simple_stmtContext _localctx = new Simple_stmtContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_simple_stmt);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(138);
			small_stmt();
			setState(143);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					setState(139);
					match(SEMI);
					setState(140);
					small_stmt();
					}
					} 
				}
				setState(145);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,5,_ctx);
			}
			setState(147);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==SEMI) {
				{
				setState(146);
				match(SEMI);
				}
			}

			setState(149);
			match(NEWLINE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Small_stmtContext extends ParserRuleContext {
		public Import_stmtContext import_stmt() {
			return getRuleContext(Import_stmtContext.class,0);
		}
		public Expr_stmtContext expr_stmt() {
			return getRuleContext(Expr_stmtContext.class,0);
		}
		public Return_stmtContext return_stmt() {
			return getRuleContext(Return_stmtContext.class,0);
		}
		public Pass_stmtContext pass_stmt() {
			return getRuleContext(Pass_stmtContext.class,0);
		}
		public Del_stmtContext del_stmt() {
			return getRuleContext(Del_stmtContext.class,0);
		}
		public Global_stmtContext global_stmt() {
			return getRuleContext(Global_stmtContext.class,0);
		}
		public Nonlocal_stmtContext nonlocal_stmt() {
			return getRuleContext(Nonlocal_stmtContext.class,0);
		}
		public Small_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_small_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterSmall_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitSmall_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitSmall_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Small_stmtContext small_stmt() throws RecognitionException {
		Small_stmtContext _localctx = new Small_stmtContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_small_stmt);
		try {
			setState(158);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
			case FROM:
				enterOuterAlt(_localctx, 1);
				{
				setState(151);
				import_stmt();
				}
				break;
			case LPAR:
			case LSQB:
			case LBRACE:
			case PLUS:
			case MINUS:
			case FALSE:
			case TRUE:
			case NONE:
			case AWAIT:
			case NOT:
			case NAME:
			case NUMBER:
			case STRING:
				enterOuterAlt(_localctx, 2);
				{
				setState(152);
				expr_stmt();
				}
				break;
			case RETURN:
				enterOuterAlt(_localctx, 3);
				{
				setState(153);
				return_stmt();
				}
				break;
			case PASS:
				enterOuterAlt(_localctx, 4);
				{
				setState(154);
				pass_stmt();
				}
				break;
			case DEL:
				enterOuterAlt(_localctx, 5);
				{
				setState(155);
				del_stmt();
				}
				break;
			case GLOBAL:
				enterOuterAlt(_localctx, 6);
				{
				setState(156);
				global_stmt();
				}
				break;
			case NONLOCAL:
				enterOuterAlt(_localctx, 7);
				{
				setState(157);
				nonlocal_stmt();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_stmtContext extends ParserRuleContext {
		public TerminalNode IMPORT() { return getToken(FlaskParser.IMPORT, 0); }
		public Dotted_as_namesContext dotted_as_names() {
			return getRuleContext(Dotted_as_namesContext.class,0);
		}
		public TerminalNode FROM() { return getToken(FlaskParser.FROM, 0); }
		public Dotted_nameContext dotted_name() {
			return getRuleContext(Dotted_nameContext.class,0);
		}
		public Import_as_namesContext import_as_names() {
			return getRuleContext(Import_as_namesContext.class,0);
		}
		public Import_stmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_stmt; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterImport_stmt(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitImport_stmt(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitImport_stmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_stmtContext import_stmt() throws RecognitionException {
		Import_stmtContext _localctx = new Import_stmtContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_import_stmt);
		try {
			setState(167);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case IMPORT:
				enterOuterAlt(_localctx, 1);
				{
				setState(160);
				match(IMPORT);
				setState(161);
				dotted_as_names();
				}
				break;
			case FROM:
				enterOuterAlt(_localctx, 2);
				{
				setState(162);
				match(FROM);
				setState(163);
				dotted_name();
				setState(164);
				match(IMPORT);
				setState(165);
				import_as_names();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Import_as_namesContext extends ParserRuleContext {
		public List<Import_as_nameContext> import_as_name() {
			return getRuleContexts(Import_as_nameContext.class);
		}
		public Import_as_nameContext import_as_name(int i) {
			return getRuleContext(Import_as_nameContext.class,i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FlaskParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FlaskParser.COMMA, i);
		}
		public Import_as_namesContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_import_as_names; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).enterImport_as_names(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FlaskParserListener ) ((FlaskParserListener)listener).exitImport_as_names(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FlaskParserVisitor ) return ((FlaskParserVisitor<? extends T>)visitor).visitImport_as_names(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Import_as_namesContext import_as_names() throws RecognitionException {
		Import_as_namesContext _localctx = new Import_as_namesContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_import_as_names);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(169);
			import_as_name();
			setState(174);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMA) {
				{
				{
				setState(170);
				match(COMMA);
				setState(171);
				import_as_name();
				}
				}
				setState(176);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}
